# okf-crossplane-v2

./: .codespellrc  .dockerignore  .editorconfig  .gitignore  AGENTS.md  Dockerfile  README.md  compose.inline.yaml  compose.yaml  mise.toml  skills-lock.json
.codex/: config.toml
.codex/agents/: okf-crossplane-core-code-researcher.toml  okf-crossplane-core-design-researcher.toml  okf-crossplane-core-docs-researcher.toml  okf-crossplane-core-update-researcher.toml  okf-crossplane-docs-update-researcher.toml  okf-crossplane-researcher.toml  okf-crossplane-runtime-update-researcher.toml  okf-function-auto-ready-researcher.toml  okf-function-environment-configs-researcher.toml  okf-function-go-templating-project-history-researcher.toml  okf-function-go-templating-researcher.toml  okf-function-go-templating-sprig-researcher.toml  okf-function-go-templating-update-researcher.toml  okf-function-sequencer-researcher.toml  okf-function-sequencer-update-researcher.toml  okf-reviewer.toml  okf-source-scout.toml  (+1 more)
.okf/: claim-ledger.md  sources.lock.yaml
.pi/: README.md  settings.json
catalog/: composition-api-and-provider-contracts.md  composition-developer-starter.md  composition-pipeline-and-security.md  composition-testing-and-packaging.md  index.md  log.md
mcp/: README.md  crossplane_marketplace.py  entrypoint.sh  fetch_cache.py  git_source.py  github_source.py  provider_crd_tools.py  pyproject.toml  server.py
mcp/tests/: test_crossplane_marketplace.py  test_git_source.py  test_github_source.py  test_provider_crd_tools.py
scripts/: validate-okf.rb
(+145 files in other folders)
